[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-tools"
dynamic = ["version"]
description = "Task execution analysis tools"
license = { text = "Apache 2.0" }
authors = [
    { name = "NVIDIA Aerial" },
]
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.8.0",
    "numpy>=2.3.2",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
task-stats = "task_stats:main"
nsys-stats = "nsys_stats:main"

# Hatchling version configuration - read from root VERSION file
[tool.hatch.version]
path = "../../../VERSION"
pattern = "(?P<version>.+)"

# Hatchling configuration for src layout
[tool.hatch.build.sources]
"src" = ""

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["task_stats", "nsys_stats"]

[tool.pylint.format]
max-line-length = 100

[tool.uv]
managed = true
